Changes in version 0.0.13 - UNRELEASED:
 * Bug 13170: Disable the rest of the Firefox experiments botnet prefs.
 * Use lockPref for the IDN override done as part of #22984.
 * Unset the addon autoupdater URL prefs.
 * Disable the "Open with" dialog, which will never work.

Changes in version 0.0.12 - 2017-08-01:
 * Bug 22969: Disable the addon blocklist.
 * Bug 22984: Force IDNs to be displayed as punycode to thwart homograph
              attacks.
 * Bug 22967: Force disable crashdump reporting.
 * Bug 23058: Apply the SelfRando workaround to 7.5a3 as well.
 * Default disable `dom.securecontext.whitelist_onions`.

Changes in version 0.0.11 - 2017-07-18:
 * Bug 22910: Deprecate the volatile extension dir option.
 * Bug 22932: Add experimental Amnesiac Profile Directory support.

Changes in version 0.0.10 - 2017-07-12:
 * Bug 22829: Remove default obfs4 bridge riemann.
 * Bug 22853: Something in SelfRando is totally brain damaged.
 * Bug 22899: `about:addons`'s "Get Addons" pane is unsafe and should be
              treated as such.
 * Bug 22901: Clarify/expand on the warnings for all the config settings.

Changes in version 0.0.9 - 2017-07-03:
 * Bug 22712: Suppress ATK Bridge initialization which will never work.
 * Bug 20773: Stop mounting /proc in the Tor Browser container.
 * Fix the build being broken on Debian Jessie due to #22648.
 * Remove the undocumented command line options that enable unsafe behavior.

Changes in version 0.0.8 - 2017-06-19:
 * Bug 20776: Remove the X11 `MIT-SHM` workaround from the stub.
 * Bug 22470: Resync the bridges.
 * Bug 22607: Make it clear that basically 0 active development is happening.
 * Bug 22648: Prevent the "easy" to fix X11 related sandbox escapes.
 * Bug 22650: Make it clear that Pulse Audio is potentially dangerous
   to enable.

Changes in version 0.0.7 - 2017-05-22:
 * Bug 21977: Fetch install/update metadata files from a different location.
 * Bug 22038: Stub out `pa_start_child_for_read`.
